--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,9 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="@dimen/activity_vertical_margin"
-    tools:context="com.serviceexample.MainActivity"
-    android:orientation="vertical">
+    tools:context="com.serviceexample.MainActivity">
 
     <Button
         android:id="@+id/btn_start"
